2017.06.XX ver2.9.4 - Fixed a bug in unchunk() [Win32].
	            - Chnaged vizier server to strasbourg (nao.ac.jp mirror
	              could be troubled in the summit LAN).
	            - Removed main_iteration(FALSE) in draw_fc_cairo
	              to fix the FC resize problem in Win64.

2017.06.01 ver2.9.3 - Added "Add Object" menu in main menu.
	            - Added GAIA DR1/2MASS for database query in FC.
	            - Revised unchunk code (g_malloc base).
	            - Some adjustments for public release.
	            - Adjusted for gtkmacintegration in OSX version to
	              display the mneu in OSX menu bar.
	            - removed screen_changed() in drawing_area operation
	              to avoid the window resize failure on OSX.

2017.05.17 ver2.9.2 - Added "Add" button in FCDB/Standard treeview panels
	              to add a selected object into the object tree.
	            - Added "File/Export to/OPE Def." and "Text List" in
	              main menu to save the current object list into an OPE
	              definition or a CSV text file.

2017.05.16 ver2.9.1 - Added GSC 2.3/PanSTARRS-1/SDSS/USNO-B for database
	              query in FC.
	              These can be used for IRCS Tip-Tilt GS selection.
	              Search default is r (or R) < 19 and d < 90".
	            - Added window size setup (Main/Plot/FC/ADC) in
	              properties.

2017.03.20 ver2.9.0 - Added SSL (OpenSSL) for https access, because SkyView
	              (by NASA) is now shifting to https based system.
	            - Improved EOF treatment for HTTP/HTTPS data download.

2017.03.07 ver2.8.13- Adjusted for MacOSX.
	            - Revised expose-event callbacks for FC, Plot, AD,
	              and SkyMon.
	            - Fixed a bug in which the saved default FC source is not
	              reflected correctly.

2017.02.27 ver2.8.12- Set the maximum FOV (25arcmin=6000pix in web server) for
	              PANSTARRS Finding Chart.