@@ -442,3 +442,13 @@ void ln_zonedate_to_date (struct ln_zonedate * zonedate, struct ln_date * date)
 	jd -= zonedate->gmtoff / 86400.0;
 	ln_get_date (jd, date);
 }
+
+int get_gmtoff_from_sys ()
+{
+  struct timeval tv;
+  struct timezone tz;
+  
+  gettimeofday (&tv, &tz);
+
+  return(tz.tz_minuteswest);
+}
